//
// Created by bart on 28.05.2026.
//

#ifndef SIMULATION_BATTLE_OF_GRUNWALD_WEATHERTYPE_HPP
#define SIMULATION_BATTLE_OF_GRUNWALD_WEATHERTYPE_HPP

/**
 * @brief Weather variants that modify warrior effectiveness during combat.
 */
enum class WeatherType {
    SUNNY,
    RAINY,
    FOGGY,
    SNOWY
};

#endif //SIMULATION_BATTLE_OF_GRUNWALD_WEATHERTYPE_HPP
